add price on form_label and remove border

--- a/assets/component-product-variant-picker.css
+++ b/assets/component-product-variant-picker.css
@@ -75,6 +75,7 @@ variant-selects {
   transition: border var(--duration-short) ease;
   cursor: pointer;
   position: relative;
+  border-radius: 0px;
 }
 
 .product-form__input--pill input[type='radio'] + label:before {
