--- a/snippets/product-variant-picker.liquid
+++ b/snippets/product-variant-picker.liquid
@@ -33,6 +33,7 @@
           endif
         endif
       -%}
+      <div>Select Hugger Motor</div>
       {%- if picker_type == 'swatch' -%}
         <fieldset class="js product-form__input product-form__input--swatch">
           <legend class="form__label">
@@ -50,7 +51,7 @@
         </fieldset>
       {%- elsif picker_type == 'button' -%}
         <fieldset class="js product-form__input product-form__input--pill">
-          <legend class="form__label">{{ option.name }}</legend>
+          <legend class="form__label">{{ option.name }}: {{- option.selected_value -}}</legend>
           {% render 'product-variant-options',
             product: product,
             option: option,
