--- a/snippets/buy-buttons.liquid
+++ b/snippets/buy-buttons.liquid
@@ -71,6 +71,7 @@
           <style>
             .advisory{
               font-size: 12px;
+              line-height: 1.3em; 
               padding: 16px 0;
             }
           </style>
@@ -104,6 +105,30 @@
           {%- if show_dynamic_checkout -%}
             {{ form | payment_button }}
           {%- endif -%}
+          <div class="arrive">Arrives in early Feb</div>
+          <div class="">Fixed installation and shipping tee of $30 per tan will be applied to all orders at checkout. Additional charges appended here may apply. Our
+          ceiling tan specialists wall contact you once you ve completed vour.
+          purchase.</div>
+          <style>
+            .arrive {
+              font-size: 16px;
+              text-align: center;
+              font-weight: 600;
+              padding: 10px 0;
+            }
+          </style>
+          <img class="banner-mobile" src={{ 'banner.png' | file_img_url: 'master' }} style="width: 100%">
+          <style>
+            .banner-mobile {
+              display:none
+            }
+            @media(max-width: 480px){
+              .banner-mobile{
+                display:block;
+                margin-top: 10px;
+              }
+            }
+          </style>
         </div>
       {%- endform -%}
     </product-form>
